--- a/index.html
+++ b/index.html
@@ -1,8 +1,44 @@
+<!DOCTYPE HTML>
 <html>
-    <head>
-        <title>Alexander Tornoreanu</title>
-    </head>
-    <body>
-        <p>follow the white rabbit ...</p>
-    </body>
+	<head>
+		<title>Alex Tornoreanu</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
+		<div id="wrapper">
+			<div id="bg"></div>
+			<div id="main">
+
+				<!-- Header -->
+					<header id="header">
+						<h1>Alexander Tornoreanu</h1>
+						<p>Freelancer &nbsp;&bull;&nbsp; Fullstack Software Developer &nbsp;&bull;&nbsp; Pilot</p>
+						<nav>
+							<ul>
+								<li><a href="https://www.linkedin.com/in/alexander-tornoreanu/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://github.com/raptox" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<li><a href="#"
+									data-nobots="YWxleEB0b3Jub3JlYW51LmF0"
+									onfocus="this.href = 'mailto:' + atob(this.dataset.nobots)"
+									class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							</ul>
+						</nav>
+					</header>
+
+				<!-- Footer -->
+					<footer id="footer">
+						<span class="copyright">&copy; Alexander Tornoreanu.</span>
+					</footer>
+
+			</div>
+		</div>
+		<script>
+			window.onload = function() { document.body.classList.remove('is-preload'); }
+			window.ontouchmove = function() { return false; }
+			window.onorientationchange = function() { document.body.scrollTop = 0; }
+		</script>
+	</body>
 </html>
